@@ -1,77 +1,0 @@
-name: Manual build binary zip on Windows (x86-64)
-
-on:
-  workflow_dispatch:
-
-jobs:
-  build:
-
-    runs-on: 'windows-2022'
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup build environment
-      uses: ilammy/msvc-dev-cmd@v1
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
-        cache: 'pip'
-    - name: Make TMPDIR
-      run: mkdir C:\vtmp
-    - name: Modify TMPDIR in environment
-      run: echo "TMPDIR=C:\vtmp" >> $env:GITHUB_ENV
-    - name: Upgrade pip
-      run : |
-        python3 -m pip install --upgrade pip
-    - name: Build pyinstaller
-      run: |
-        python3 -m pip -v install setuptools
-        git clone https://github.com/pyinstaller/pyinstaller
-        cd pyinstaller
-        cd bootloader
-        python3 ./waf distclean all
-        cd ..
-        python3 -m pip install .
-        cd ..
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v4
-      with:
-        cache: 'true'
-        cache-key-prefix: 'qt-windows-binary-v1'
-        version: '6.9.0'
-        setup-python: false
-    - name: Install PyQt
-      run: |
-        pip3 -v install setuptools sip packaging PyQt_builder
-        pip3 -v install --config-settings --confirm-license= --no-binary :all: PyQt6
-    - name: Install numpy
-      run: |
-        python3 -m pip -v install setuptools wheel packaging pyproject-metadata
-        python3 -m pip -v install Cython meson meson-python ninja
-        python3 -m pip -v install numpy
-    - name: Install other modules
-      run: |
-        python3 -m pip install -r requirements.txt
-        python3 -m pip install iminuit
-        python3 -m pip install https://github.com/jeremysanders/pyemf3/archive/master.zip
-    - name: Build Veusz extensions
-      run: |
-        python3 setup.py build_ext --inplace
-        copy build/lib*/veusz/helpers/*.dll veusz/helpers
-    - name: Run tests
-      run: |
-        set QT_QPA_PLATFORM=minimal
-        set VEUSZ_INPLACE_TEST=1
-        python tests/runselftest.py
-      env:
-        VEUSZ_INPLACE_TEST: '1'
-        VEUSZ_REMOVE_FROM_ENV: 'QT_PLUGIN_PATH QML2_IMPORT_PATH'
-    - name: Build binary with pyinstaller
-      run: |
-        pyinstaller support/veusz_windows_pyinst.spec
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: portable_zip
-        path: dist
