@@ -77,13 +77,13 @@ jobs:
     - name: Use NSIS to make installer
       run: |
         & "C:\Program Files (x86)\NSIS\makensis.exe" install.nsi
-    - name: Upload artifact
+    - name: Upload installer artifact
       uses: actions/upload-artifact@v4
       with:
         name: windows-installer
         path: installer_out
-    # - name: Upload artifact
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: pyinstfiles
-    #     path: dist
+    - name: Upload zip artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: portable-zip
+        path: dist
