@@ -5,6 +5,7 @@ Changes in 4.1:
   * Fix for formatting dock when deleting widgets (korintje)
   * Bind icon to desktop file on Wayland (antohami)
   * Fix for dual monitors under Wayland
+  * Provide portable zip executable for Windows
 
 Changes in 4.0:
   * Update to using Qt6 (jeremysanders/korintje)
